middleware layer with use

--- a/views/index.html
+++ b/views/index.html
@@ -8,5 +8,9 @@
 <body>
     <h1>QuillQuest</h1>
     <h2>QuillQuest is a blog built with nodejs and mongodb.</h2>
+    <nav>
+        <a href="/">Home</a>
+        <a href="/about">About</a>
+    </nav>
 </body>
 </html>
