adding partials and styling

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,25 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+    <%- include('./partials/head.ejs') %>
 <body>
-    <nav>
-        <div class="site-title">
-          <a href="/"><h1>QuillQuest</h1></a>
-          <p>QuillQuest Blogs</p>
-        </div>
-        <ul>
-          <li><a href="/">Blogs</a></li>
-          <li><a href="/about">About</a></li>
-          <li><a href="/blogs/create">New Blog</a></li>
-        </ul>
-      </nav>
+    <%- include('./partials/nav.ejs') %>
+
       <div class="about content">
         <h2>About us</h2>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minima dolore porro non temporibus velit animi adipisci ratione maxime enim ullam dolorem, blanditiis repellendus veniam. Maxime et quibusdam iste eos sunt.</p>
       </div>
+      <%- include('./partials/footer.ejs') %>
 </body>
 </html>
