--- a/views/404.ejs
+++ b/views/404.ejs
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title><%= title%></title>
 </head>
 <body>
     <div class="404 content">
         <h1>404</h1>
     </div>
+    <%- include('./partials/footer.ejs') %>
 </body>
 </html>
