--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,24 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+    <%- include('./partials/head.ejs') %>
 <body>
-    <nav>
-        <div class="site-title">
-          <a href="/"><h1>QuillQuest</h1></a>
-          <p>QuillQuest Blogs</p>
-        </div>
-        <ul>
-          <li><a href="/">Blogs</a></li>
-          <li><a href="/about">About</a></li>
-          <li><a href="/blogs/create">New Blog</a></li>
-        </ul>
-      </nav>
+    <%- include('./partials/nav.ejs') %>
+
       <div class="blogs content">
         <h2>All Blogs</h2>
-      </div>
+        <%if(blogs.length>0){ %>
+            <% blogs.forEach(blog=>{ %>
+                <h3 class="title"><%=blog.title%></h3>
+                <p class="snippet"><%=blog.snippet%></p>
+            <% })%>
+       <% }else{%>
+        <h1>No blogs</h1>
+       <%}%>
+    </div>
+    <%- include('./partials/footer.ejs') %>
 </body>
 </html>
